# 705py

./: main.py  pyproject.toml
705py-main/: 1consolidate.py  README.md  analyzer.py  consolidate.py  main.py  pyproject.toml
705py-main/analysis/: 2025-09-30-abc123.csv
705py-main/transcripts/: 2025-09-30-abc123.jsonl  2025-10-06-meet1.jsonl  2025-10-17-meet2.jsonl  2025-10-18-topic-a-ai.jsonl
